src/objects/BillNPay__T2P_ConfigurationSetting__c.object
<CustomObject>
    <description>Each payment gateway used with Bill &amp; Pay requires a Gateway Configuration</description>
    <fields>
        <fullName>BillNPay__Encrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Gateway__c</fullName>
        <label>Gateway</label>
        <referenceTo>BillNPay__T2P_Configuration__c</referenceTo>
        <relationshipLabel>Gateway Configuration</relationshipLabel>
        <relationshipName>GatewayConfiguration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BillNPay__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Key__c</fullName>
        <label>Key</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BillNPay__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Sequence__c</fullName>
        <label>Sequence#</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Value__c</fullName>
        <label>Value</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Gateway Configuration</label>
    <nameField>
        <displayFormat>GCS-{0000}</displayFormat>
        <label>Gateway Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>